kyverno-101-with-linkerd/require-memory-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-memory-limits
spec:
  rules:
  - name: require-memory-limits
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
        - resources:
            namespaces:
              - kube-system
              - kyverno
              - linkerd
              - linkerd-viz
    validate:
      failureAction: Audit
      message: "Pod requires limits"
      pattern:
        spec:
          containers:
          - resources:
              limits:
                memory: "?*"
          =(initContainers):
          - resources:
              limits:
                memory: "?*"
          =(ephemeralContainers):
          - resources:
              limits:
                memory: "?*"
